@@ -141,6 +141,9 @@ Core and builtins
 Library
 -------
 
+- Patch #1663234: you can now run doctest on test files and modules
+  using "python -m doctest [-v] filename ...".
+
 - Patch #1121142: Implement ZipFile.open.
 
 - Taught setup.py how to locate Berkeley DB on Macs using MacPorts.
